--- a/uefi_sec/Makefile.am
+++ b/uefi_sec/Makefile.am
@@ -3,16 +3,13 @@ pkgconfigdir = $(libdir)/pkgconfig
 AM_CFLAGS = -Wall -g \
         -Wundef \
         -Wstrict-prototypes \
-        -Wno-trigraphs \
-        $(SECUREMSM-NOSHIP_CFLAGS) \
-        -I$(top_srcdir)/../QSEEComAPI/ \
+        -Wno-trigraphs
 
 ACLOCAL_AMFLAGS = -I m4
 
 AM_CPPFLAGS = -D__packed__= \
     -DFEATURE_LE_DIAG \
-    -DOE \
-    $(SECUREMSMNOSHIP_CFLAGS)
+    -DOE
 
 bin_PROGRAMS = uefi_sec
 
@@ -20,5 +17,4 @@ uefi_sec_SOURCES = uefi_sec.c SecureUILib.h
 uefi_sec_CPPFLAGS = $(AM_CPPFLAGS)
 uefi_sec_CFLAGS = $(AM_CFLAGS)
 uefi_sec_LDFLAGS = -lpthread -ldl -lQseeComApi -ldrmfs -lrpmb -lssd
-uefi_sec_LDADD = -lQseeComApi -ldmabufheap -lqcbor
-uefi_sec_LDADD += -lminkdescriptor
+uefi_sec_LDADD = -lQseeComApi -ldmabufheap -lqcbor -lminkdescriptor
