add autoconf support for service file
Signed-off-by: Chirag Jain <quic_chirjain@quicinc.com>
Signed-off-by: Venkat Thogaru <quic_thogaru@quicinc.com>

--- a/uefi_sec/Makefile.am
+++ b/uefi_sec/Makefile.am
@@ -18,3 +18,8 @@ uefi_sec_CPPFLAGS = $(AM_CPPFLAGS)
 uefi_sec_CFLAGS = $(AM_CFLAGS)
 uefi_sec_LDFLAGS = -lpthread -ldl -lQseeComApi -ldrmfs -lrpmb -lssd
 uefi_sec_LDADD = -lQseeComApi -ldmabufheap -lqcbor -lminkdescriptor
+
+if USE_SYSTEMD
+systemdunitdir = @SYSTEMD_UNITDIR@
+systemdunit_DATA = uefi_sec.service
+endif
