Uefi_sec service: Run the app uefi_sec in the background
The service is modified to just launch the app in the
background and then exit.

Signed-off-by: Kavinaya S <quic_kavinaya@quicinc.com>

--- a/uefi_sec/uefi_sec.service
+++ b/uefi_sec/uefi_sec.service
@@ -9,9 +9,10 @@ Requires=qteesupplicant.service
 DefaultDependencies=no
 
 [Service]
-Type=oneshot
+Type=simple
+ExecStart=/usr/bin/uefi_sec &
+ExecStartPost=/bin/true
 RemainAfterExit=yes
-ExecStart=/usr/bin/uefi_sec
 
 [Install]
 WantedBy=multi-user.target
